# flake8-clean-block

./: .pre-commit-config.yaml  README.md  flake8_clean_block.py  setup.cfg
.github/workflows/: python-package.yml
tests/: not_ok_cases.py  ok_cases.py  test_clean_block.py
