[metadata]
name = flake8_clean_block
version = 0.1.0
description = flake8 plugin which enforces blank line after if/for/while/with/try blocks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
author =
author_email =
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_clean_block
install_requires =
    flake8>=4
python_requires = >=3.7

[options.entry_points]
flake8.extension =
    CLB=flake8_clean_block:Plugin

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
