[metadata]
name = flake8_clean_block
version = 0.1.2
description = A flake8 plugin that enforces a blank line after if/for/while/with/try blocks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cyyc1/flake8-clean-block
author =
author_email =
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_clean_block
install_requires =
    flake8>=4
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    CLB=flake8_clean_block:Plugin

[bdist_wheel]
universal = True
